# mymusic_daw

./: .gitignore  AGENTS.md  Cargo.toml  MIDI_BRIDGE.md  README.md  TAURI_SETUP.md  TODO.md  test_mp3_support.md  test_plugin_integration.py
.github/: FUNDING.yml
.github/workflows/: test.yml
benches/: audio_benchmarks.rs  simd_benchmarks.rs
doc/: COMMAND_PATTERN.md  sequencer.md
doc/examples/: metronome_example.rs
doc/test/: TESTING.md
scripts/: memory_leak_detection.sh
src/: lib.rs  main.rs
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: events.rs  lib.rs  main.rs  window_utils.rs
src-tauri/src/commands/: basic.rs  mod.rs  plugin.rs
src-tauri/src/commands/basic/: mod.rs
src/audio/: buffer.rs  cpu_monitor.rs  device.rs  dsp_utils.rs  engine.rs  engine.rs.routing_in_progress  export.rs  format_conversion.rs  memory.rs  mod.rs  parameters.rs  profiling.rs  routing.rs  simd.rs  timing.rs
src/command/: commands.rs  manager.rs  mod.rs  state.rs  trait_def.rs
src/connection/: mod.rs  reconnect.rs  status.rs
src/messaging/: channels.rs  command.rs  mod.rs  notification.rs
src/midi/: device.rs  event.rs  input.rs  manager.rs  mod.rs
src/plugin/: buffer_pool.rs  clap_ffi.rs  clap_gui.rs  clap_integration.rs  clap_integration_tests.rs  gui.rs  host.rs  instance.rs  midi_bridge.rs  mod.rs  parameters.rs  scanner.rs  simple_tests.rs  trait_def.rs
src/project/: manager.rs  migration.rs  mod.rs  serialization.rs  types.rs
src/sampler/: bank.rs  engine.rs  loader.rs  mod.rs  tests.rs
src/sequencer/: metronome.rs  midi_recorder.rs  mod.rs  note.rs  pattern.rs  player.rs  timeline.rs  transport.rs
src/synth/: delay.rs  effect.rs  envelope.rs  filter.rs  lfo.rs  mod.rs  modulation.rs  oscillator.rs  poly_mode.rs  portamento.rs  reverb.rs  voice.rs  voice_manager.rs
src/ui/: app.rs  mod.rs  piano_roll.rs
tests/: edge_cases.rs  fuzz_midi_parser.rs  latency.rs  midi_to_audio.rs  project_persistence_integration.rs  sample_bank.rs  stability.rs
ui/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/app/: App.example.tsx  routes.ts
ui/app/components/: DawEngineTest.tsx  ErrorHandling.tsx  StatusBar.tsx
ui/app/docs/: demo-interface-guide.md  synthesizer-controls.md
ui/app/hooks/: useAudioEvents.test.ts  useAudioEvents.ts  useDawEngine.ts
ui/app/routes/: _index.tsx  plugins.tsx  synthesizer-demo.tsx
ui/app/types/: midi.ts
ui/src/: App.css  App.tsx
ui/src/components/: PluginParameterControl.tsx
ui/src/hooks/: useDawEngine.ts  usePluginControls.ts
