[package]
name = "mymusic_daw"
version = "0.5.1"
edition = "2024"
default-run = "mymusic_daw"

[dependencies]
cpal = "0.15"
midir = "0.9"
eframe = "0.30"
egui = "0.30"
egui_plot = "0.30"
ringbuf = "0.4"
hound = "3.5"
claxon = "0.4"
symphonia = { version = "0.5", features = ["mp3"] }
rubato = "0.14"
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
zip = "1.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
walkdir = "2.4"
libloading = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"

# SIMD dependencies
wide = "0.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"
flamegraph = "0.6"
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
num-traits = "0.2"
rand = "0.8"

# SIMD dependencies
wide = "0.7"

# Memory leak detection dependencies
addr2line = "0.17"

[[bench]]
name = "audio_benchmarks"
harness = false

[[bench]]
name = "simd_benchmarks"
harness = false

[[bin]]
name = "test_clap"
path = "src/bin/test_clap.rs"

[[bin]]
name = "profile_audio"
path = "src/bin/profile_audio.rs"
