[package]
name = "mymusic-daw-tauri"
version = "0.1.0"
description = "MyMusic DAW - Tauri Desktop Application"
authors = ["Your Name"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri dependencies
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# DAW engine (from parent directory)
mymusic_daw = { path = ".." }

# Audio dependencies (re-exported from main crate)
ringbuf = { version = "0.4", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]
