[package]
name = "mymusic-daw-tauri"
version = "0.5.1"
description = "MyMusic DAW - Digital Audio Workstation"
authors = ["Franck Vienot"]
license = "MIT"
repository = "https://github.com/antikkorps/mymusic_daw"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
# Tauri dependencies
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# DAW engine (from parent directory)
mymusic_daw = { path = ".." }

# Audio dependencies (re-exported from main crate)
ringbuf = { version = "0.4", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]
