[package]
name = "mymusic-daw-tauri"
version = "0.5.1"
description = "MyMusic DAW - Digital Audio Workstation"
authors = ["Franck Vienot"]
license = "MIT"
repository = "https://github.com/antikkorps/mymusic_daw"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
# Tauri dependencies
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# DAW engine (from parent directory)
mymusic_daw = { path = ".." }

# Audio dependencies (re-exported from main crate)
ringbuf = { version = "0.4", features = [] }
lazy_static = "1.4"

# Base64 encoding for window handles
base64 = "0.22"

# Platform-specific window handle dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.25"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]
